working on surface traction load

--- a/changelog.txt
+++ b/changelog.txt
@@ -126,3 +126,5 @@
 
 2025-01-04 changing cubit version to 2025.1, sending silent commands needs to be updated, windows history bug is now fixed
 2025-01-05 working on implementing surface traction load
+2025-01-09 working on implementing surface traction load
+2025-01-09 working on surface traction load
