--- a/changelog.txt
+++ b/changelog.txt
@@ -130,3 +130,5 @@
 2025-01-09 working on surface traction load in core
 2025-01-20 working on adding equations to constraints in core
 2025-01-21 working on equations
+2025-02-14 working on draw surface traction and equation
+
